moved protocol handling stuff into cproxy_protocol.c

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,7 @@ memcached_SOURCES = memcached.c memcached.h \
                     work.c work.h \
                     cproxy.c cproxy.h \
                     cproxy_config.c \
+                    cproxy_protocol.c \
                     cproxy_stats.c
 
 if BUILD_CACHE
