--- a/Makefile.am
+++ b/Makefile.am
@@ -20,6 +20,7 @@ memcached_SOURCES = memcached.c memcached.h \
                     cproxy_config.c \
                     cproxy_protocol.c \
                     cproxy_multiget.c \
+                    cproxy_stats.c \
                     agent_config.c \
                     agent_stats.c
 
