--- a/configure.ac
+++ b/configure.ac
@@ -346,6 +346,14 @@ AC_CHECK_HEADER(umem.h, [
 
 AM_CONDITIONAL([BUILD_CACHE], [test "x$build_cache" = "xyes"])
 
+AC_CHECK_HEADER(memagent.h, [
+   AC_DEFINE([HAVE_MEMAGENT_H], 1,
+         [Define this if you have memagent.h])
+   build_memagent=no
+], [build_memagent=yes])
+
+AM_CONDITIONAL([BUILD_MEMAGENT], [test "x$build_memagent" = "xyes"])
+
 AC_ARG_ENABLE(docs,
   [AS_HELP_STRING([--disable-docs],[Disable documentation generation])])
 
