rename funcs to a2a and a2b in prep for binary protocol

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,6 +19,8 @@ moxi_SOURCES = memcached.c memcached.h \
                     cproxy.c cproxy.h \
                     cproxy_config.c \
                     cproxy_protocol.c \
+                    cproxy_protocol_a2a.c \
+                    cproxy_protocol_a2b.c \
                     cproxy_multiget.c \
                     cproxy_stats.c
 
