split out cproxy_front.c

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,6 +28,7 @@ moxi_SOURCES = memcached.c memcached.h \
                     cproxy_protocol_a2b.c \
                     cproxy_multiget.c \
                     cproxy_stats.c \
+                    cproxy_front.c \
                     matcher.c matcher.h
 
 TESTS = check_util
