--- a/libmemcached/Makefile.am
+++ b/libmemcached/Makefile.am
@@ -1,7 +1,9 @@
-ACLOCAL_AMFLAGS = -I config
+ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = docs libmemcached libmemcachedutil tests support clients
 EXTRA_dist = README.FIRST
+
+check-local: test-no-outputdiff
 
 test: all
 	@(cd tests; ${MAKE} test)
