fix for type-punned pointer and library order

--- a/.gitignore
+++ b/.gitignore
@@ -52,4 +52,5 @@ libmemcached-*/libmemcached/.libs/
 libmemcached-*/libmemcached/*.lo
 libmemcached-*/libmemcached/*.la
 libmemcached-*/libmemcached/libmemcached_config.h
+.buildbot/*
 
