distribute complete libmemcached-0.30 subdirectory so that all headers are included and original readme/authors/etc. info is preserved

--- a/Makefile.am
+++ b/Makefile.am
@@ -96,7 +96,7 @@ memcached_debug_dtrace.o: $(moxi_debug_OBJECTS)
 
 SUBDIRS = doc libmemcached-0.30/libmemcached
 DIST_DIRS = scripts
-EXTRA_DIST = doc scripts TODO t memcached.spec memcached_dtrace.d version.m4
+EXTRA_DIST = doc scripts TODO t memcached.spec memcached_dtrace.d version.m4 libmemcached-0.30
 
 MOSTLYCLEANFILES = *.gcov *.gcno *.gcda *.tcov
 
