--- a/configure.ac
+++ b/configure.ac
@@ -450,6 +450,14 @@ then
   CFLAGS="$CFLAGS -errfmt=error -errwarn -errshort=tags"
 fi
 
+AC_ARG_VAR([CONFLATE_DB_PATH], [Directory for libconflate config database (default /var/lib/]AC_PACKAGE_NAME[)])
+if test "x$useconflate" = "xyes"; then
+  if test "x$CONFLATE_DB_PATH" = x; then
+    CONFLATE_DB_PATH=/var/lib/$PACKAGE
+  fi
+  AC_DEFINE_UNQUOTED([CONFLATE_DB_PATH], ["$CONFLATE_DB_PATH"], [directory for libconflate config database])
+fi
+
 
 AC_SEARCH_LIBS(memcached_create, memcached)
 
